# demo-github-actions

./: LICENSE  README.md  basic.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: basic.yml  basic_uv.yml  branch_name.yml  cache.yml  context.yml  demo.yml  env_var.yml  env_var_pass.yml  env_var_path.yml  env_var_read.yml  env_var_write.yml  github_script.yml  homebrew.yml  job_summary.yml  log_annotation.yml  log_message.yml  matrix.yml  mise.yml  parallel.yml  parallel_dir.yml  parallel_file.yml  system_path.yml  uv.yml  workflow_input.yml
tests/dir1/: test_parallel_1.py  test_parallel_2.py
tests/dir2/: test_parallel_3.py  test_parallel_4.py
tests/dir3/: test_parallel_5.py  test_parallel_6.py
